# CV_Project3

./: .gitignore  PLANCODE.md  README.md  pyproject.toml  report.md
configs/: dataset.yaml  yolo_v1_face.yaml
scripts/: evaluate.py  infer.py  prepare_data.py  train.py
src/datasets/: transforms.py
src/models/: backbone.py  head.py  yolo_v1.py
src/yolo/datasets/: __init__.py  face_dataset.py
src/yolo/engine/: __init__.py
src/yolo/inference/: __init__.py  predictor.py
src/yolo/losses/: __init__.py  yolo_v1_loss.py
src/yolo/models/: yolo_v1.py
src/yolo/utils/: metrics.py  nms.py
