[project]
name = "yolo-training"
version = "0.1.0"
description = "YOLO object detection from scratch for face detection"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "torchvision>=0.20",
    "numpy",
    "opencv-python",
    "pillow",
    "pyyaml",
    "tqdm",
    "matplotlib",
    "scikit-learn",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
